apps/staging/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homepage
      port:
        number: 3000
  tls:
    - hosts:
        - homepage
